Test API request

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script type='text/javascript'>
+      window.HOTELBED_API_KEY = "<%= Rails.application.credentials.hotelbed_api_key %>"
+      window.HOTELBED_SECRET = "<%= Rails.application.credentials.hotelbed_secret %>"
+      window.IMPALA_API_KEY =  "<%= Rails.application.credentials.impala_api_key %>"
+    </script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
